<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.remoteview.RemoteFragment">

    <Button
        android:id="@+id/home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home_button_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/power"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/power_button_text"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/vol_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/volume_up_button_text"
        app:layout_constraintBottom_toTopOf="@id/vol_down"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/vol_down"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/volume_down_button_text"
        app:layout_constraintBottom_toTopOf="@id/move_up"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/vol_up" />

    <Button
        android:id="@+id/move_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/up_button_text"
        app:layout_constraintBottom_toTopOf="@id/okay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/vol_down" />

    <Button
        android:id="@+id/move_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/left_button_text"
        app:layout_constraintBottom_toBottomOf="@id/okay"
        app:layout_constraintEnd_toStartOf="@id/okay"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/okay" />

    <Button
        android:id="@+id/okay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/okay_button_text"
        app:layout_constraintBottom_toTopOf="@id/move_down"
        app:layout_constraintEnd_toStartOf="@id/move_right"
        app:layout_constraintStart_toEndOf="@id/move_left"
        app:layout_constraintTop_toBottomOf="@id/move_up" />

    <Button
        android:id="@+id/move_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/right_button_text"
        app:layout_constraintBottom_toBottomOf="@id/okay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/okay"
        app:layout_constraintTop_toTopOf="@id/okay" />

    <Button
        android:id="@+id/move_down"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/down_button_text"
        app:layout_constraintBottom_toTopOf="@id/play_pause"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/okay" />

    <Button
        android:id="@+id/play_pause"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/play_pause"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/move_down" />

    <Button
        android:id="@+id/rewind"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rewind"
        app:layout_constraintEnd_toStartOf="@id/play_pause"
        app:layout_constraintTop_toTopOf="@id/play_pause" />

    <Button
        android:id="@+id/fast_forward"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fast_forward"
        app:layout_constraintStart_toEndOf="@id/play_pause"
        app:layout_constraintTop_toTopOf="@id/play_pause" />

    <Button
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back_button_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>